# aoc_2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
day_01/: solution.py
day_02/: solution.py
day_03/: solution.py
day_04/: solution.py
day_05/: solution.py
day_06/: solution.py
day_07/: solution.py
day_08/: solution.py
day_09/: solution.py
day_10/: solution.py
day_11/: solution.py
day_12/: solution.py
day_13/: solution.py
day_14/: solution.py
day_15/: solution.py
day_16/: solution.py
day_17/: solution.py
day_18/: solution.py
day_19/: solution.py
day_20/: solution.py
day_21/: solution.py
day_22/: solution.py
day_23/: solution.py
day_24/: solution.py
