[project]
name = "aoc-2024"
version = "0.1.0"
description = "Solutions for Advent of Code 2024"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]
